--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Topicos Avançados</title>
 </head>
 <body>
-	<h1>Colaborando em projetos com git e github</h1>
+	<h1>Colaborando em projetos</h1>
 </body>
 </html>
