--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Topicos Avançados</title>
+	
 </head>
 <body>
 	<h1>Colaborando em projetos com git e github</h1>
+	<h1>Modificações</h1>
 </body>
 </html>
